--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -1,10 +1,10 @@
-@import './../../colors';
+@import './../../global';
 
 .HeaderHolder{
     background-color: $white;
     position: sticky;
     top: 0;
-    height: 15%;
+    height: $header-height;
     display: flex;
     flex-direction: column;
     align-items: center;
