--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 @import "./global";
 
 .App{
-  background-color: $white;
+  background-color: $background;
   overflow-y: scroll;
   height: 100vh;
   width: 100vw;
