--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,33 @@
 .App{
   background-color: $background;
   overflow-y: scroll;
+  overflow-x: hidden;
   height: 100vh;
   width: 100vw;
   position: fixed;
+}
+
+.Footer{
+  bottom: 0;
+  width: 100%;
+  height: 10%;
+  background-color: $black;
+  color: $white;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+  text-align: center;
+  .FooterText{
+    margin-left: 1%;
+    margin-right: 1%;
+  }
+  .FooterLink{
+    color: $white;
+    text-decoration: none;
+    &:hover{
+      color: $olive;
+    }
+  }
 }
