--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -10,17 +10,38 @@
     align-items: center;
     border-bottom: 1px solid RGB(0, 0, 0, 0.5);
     z-index: 100;
+    height: fit-content;
     .HeaderLogo{
-        scale: 0.8;
         fill: $white;
+        height: 50px;
+        width: 350px;
+        align-self: center;
+        margin-top: 1rem;
+        
     }
     .SidebarButton{
-        margin-left: auto;
-        margin-right: 3%;
-        top: 0;
+        position: absolute;
+        right: 0;
+        margin-top: auto;
+        color: $white;
         background: none;
         border: none;
         cursor: pointer;
+        //align vertical
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        width: 5rem;
+        scale: 1.2;
+        @media only screen and (max-width: 768px) {
+            //disable
+            position: relative;
+            width: 100%;
+            height: 5rem;
+        }
+
     }
 }
 
@@ -30,11 +51,12 @@ $sidebar-width:18%;
     position:fixed;
     width: 100%;
     height: 100vh;
-    background-color: #000000;
+    background-color: $white;
     opacity: 0.5;
     z-index: 998;
     right: 0px;
     left: 0px;
+    top: 0px;
     animation: fadeIn 0.4s ease-in-out;
     @keyframes fadeIn {
         0%{
@@ -50,13 +72,12 @@ $sidebar-width:18%;
 .Sidebar {
     position: fixed;
     top: 0;
-    right: -300px;
+    right: -100%;
     width: $sidebar-width;
     height: 100vh;
     background-color: $black;
     transition: right 0.4s ease-in-out;
     z-index: 999;
-    
     @media only screen and (max-width: 768px) {
         width: 100%;
     }
@@ -81,4 +102,12 @@ $sidebar-width:18%;
             text-decoration: solid underline $olive;
         }
     }
+    .Back{
+        background-color: $white;
+        align-items: center;
+        justify-content: center;
+        width: 5rem;
+        height: 5rem;
+    }
 }
+
